# Nomad_HSQDoc

./: README.md  app.py  build.sh  notebook.ipynb  pyproject.toml  render.yaml  requirements.txt  test.py
config/: authentication.py  settings.py  urls.py
gptconversations/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
gptconversations/migrations/: 0001_initial.py  0002_initial.py  0003_rename_name_conversation_title.py  0004_conversation_pdf.py  0005_alter_conversation_pdf.py  0006_alter_conversation_pdf.py  0007_rename_pdf_conversation_file.py  0008_alter_conversation_file.py  0009_conversation_file_name.py  0010_rename_file_conversation_file_url.py
gptmessages/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
gptmessages/migrations/: 0001_initial.py  0002_alter_message_ai_message_alter_message_user_message.py  0002_message_owner.py  0003_remove_message_ai_message_and_more.py  0003_remove_message_owner.py  0004_message_model_message_token.py  0005_alter_message_model.py  0006_alter_message_model.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_language.py  0002_user_api_key.py  0003_remove_user_name_alter_user_gender.py  0003_rename_api_key_user_claude_api_key_and_more.py  0004_alter_user_first_name_alter_user_last_name.py  0004_user_claude_tokens_user_openai_tokens.py
utils/: constants.py
utils/constant/: constant.py
utils/functions/: chat.py  debug.py  save_env.py
